# MBSS

./: .gitignore  CHANGELOG.md  Cargo.toml  MBSS.sln  MassBeatSaberStripper.sln  README.md
.github/: dependabot.yml
.github/workflows/: build-release.yml  build.yml  publish.yml  release.yml
MBSS/: MBSS.csproj  Program.cs
MassBeatSaberStripper/: MassBeatSaberStripper.csproj  Program.cs
assets/.github/workflows/: mbss.yml
src/: main.rs  structs.rs  utils.rs
