[package]
name = "mbss"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
dunce = "1.0.5"
git2 = "0.19.0"
reqwest = { version = "0.12.7", features = ["json"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zip = "2.2.0"
