[package]
name = "mbss"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
dotenvy = "0.15.7"
dunce = "1.0.5"
git2 = "0.19.0"
include_dir = "0.7.4"
reqwest = { version = "0.12.7", features = ["json"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
tempfile = "3.13.0"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zip = "2.2.0"

[features]
default = ["stripping"]
stripping = []
